Fix overlap issue with group members list in multiple columns
If a group members list was in the left of multiple columns
the output was overlapping with the column to the right.

This patch changes the way the members are displayed by doing
the following:
- Replace row and column options to be the number of members
to show
- Default to show 12 members instead of 6
- Displays the given number of users without overlapping

bug #649626

--- a/htdocs/theme/raw/static/style/style.css
+++ b/htdocs/theme/raw/static/style/style.css
@@ -234,6 +234,18 @@ table.fixwidth {
 	background-color: #f3f3f3;
 	border-bottom: 2px solid #FFF;
 }
+.d0 div {
+	background-color: #f9f9f9;
+	border-bottom: 2px solid #FFF;
+}
+.d1 div {
+	background-color: #f3f3f3;
+	border-bottom: 2px solid #FFF;
+}
+.friendcell, .friendcell div {
+    display: inline-block;
+    width: 64px;
+}
 tr.editrow, tr.editrow td {
 	background-color: #e7e7e7 !important;
 	border-bottom: 2px solid #FFF;
